add best results

--- a/report/figure-prediction.tex
+++ b/report/figure-prediction.tex
@@ -50,8 +50,8 @@
   \caption{The predicted and actual human judgments of the change in similarity of the best
     models for each language on the evaluation dataset.
     The best models are highlighted in \cref{table:evaluation-best-score}.
-    The zero-mean Pearson correlation coefficient, i.e., the score, is given in the
-    top-left corner of each plot (\cref{sec:task-definition}).
+    The zero-mean Pearson correlation coefficient (\cref{sec:task-definition}), i.e., the
+    score, is given in the top-left corner of each plot.
   }
   \label{chart:predicted}
 \end{figure}
