--- a/report/section-related-work.tex
+++ b/report/section-related-work.tex
@@ -39,9 +39,10 @@ different kinds of embeddings for word-similarity tasks and found that static
 embeddings can be obtained from contextual models that outperform their contextual
 counterparts while reducing the cost of inference.
 Surveys of contextual and static embeddings are given by
-\textcites{Liu2020}{Torregrossa2021}, and further analyses of contextual language
-models by \textcites{Reif2019}{Brunner2019}, for example.
-The costs and benefits of contextual models in this context are discussed in
+\textcites{Liu2020}{Torregrossa2021}, cross-lingual embeddings by \textcite{Ruder2019},
+and further analyses of contextual language models by
+\textcites{Reif2019}{Brunner2019}, for example.
+The costs and benefits of contextual models for the task at hand are discussed in
 \cref{sec:cost-benefit}.
 
 \subsection{Word similarity}
