--- a/report/table-evaluation-best-score.tex
+++ b/report/table-evaluation-best-score.tex
@@ -64,10 +64,10 @@
     \caption{Pooled}
   \end{subfigure}
   \caption{The best scores on the \emph{evaluation} dataset for each kind of embedding.
-    The best overall score for each language is underlined -- in all cases, the best score
-    was obtained with the composition operation of addition.
-    The predicted and actual human judgments of the change in similarity for these models
-    are shown in \cref{chart:predicted}.
+    The best overall score for each language is underlined -- in all cases, it was obtained
+    with the composition operation of addition.
+    The predicted and actual human judgments of the change in similarity for the best
+    overall models are shown in \cref{chart:predicted}.
   }
   \label{table:evaluation-best-score}
 \end{table}
