--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -7,8 +7,8 @@ The purpose of this investigation was to compare the performance of static and
 contextual embeddings, and their composition within a fixed-size context window, on the
 task of predicting the change in the human judgment of similarity of a pair of words in
 two different contexts.
-I found that contextual embeddings significantly outperformed static embeddings but at
-a computational cost (\cref{sec:cost-benefit}).
+I found that contextual embeddings significantly outperformed static embeddings
+(\cref{sec:significance}) but at a computational cost (\cref{sec:cost-benefit}).
 Composition benefited both static and contextual embeddings of sub-word tokens, with a
 language-dependent optimal window size (\cref{sec:language-specificity}).
 
