add nemenyi test results

--- a/report/figure-prediction.tex
+++ b/report/figure-prediction.tex
@@ -21,8 +21,9 @@
             vertical sep = 0.7in,
             horizontal sep = 0.5in,
           },
-        width = 3in,
-        height = 2in,
+        scale only axis,
+        width = 2.5in,
+        height = 1.5in,
         xlabel = Predicted,
         ylabel = Actual,
         cycle list/Paired,
