--- a/report/figure-score-time.tex
+++ b/report/figure-score-time.tex
@@ -19,8 +19,9 @@
             ylabels at = edge left,
             xlabels at = edge bottom,
           },
-        width = 6in,
-        height = 3in,
+        scale only axis,
+        width = 5.5in,
+        height = 2in,
         xlabel = Time per instance (s),
         ylabel = Score,
         cycle list/Paired,
