--- a/report/figure-score-window.tex
+++ b/report/figure-score-window.tex
@@ -22,11 +22,12 @@
         group style = {
             group size = 2 by 2,
             ylabels at = edge left,
-            vertical sep = 2.5in,
-            horizontal sep = 0.7in,
+            vertical sep = 2.75in,
+            horizontal sep = 0.75in,
           },
-        width = 3in,
-        height = 3in,
+        scale only axis,
+        width = 2.25in,
+        height = 2.25in,
         xlabel = Window size,
         ylabel = Score,
         xtick = {0,10,...,50},
@@ -62,11 +63,12 @@
         group style = {
             group size = 2 by 2,
             ylabels at = edge left,
-            vertical sep = 2.5in,
-            horizontal sep = 0.7in,
+            vertical sep = 2.75in,
+            horizontal sep = 0.75in,
           },
-        width = 3in,
-        height = 3in,
+        scale only axis,
+        width = 2.25in,
+        height = 2.25in,
         xlabel = Window size,
         ylabel = Score,
         xtick = {0,1,...,10},
@@ -102,11 +104,12 @@
         group style = {
             group size = 2 by 2,
             ylabels at = edge left,
-            vertical sep = 2.5in,
-            horizontal sep = 0.7in,
+            vertical sep = 2.75in,
+            horizontal sep = 0.75in,
           },
-        width = 3in,
-        height = 3in,
+        scale only axis,
+        width = 2.25in,
+        height = 2.25in,
         xlabel = Window size,
         ylabel = Score,
         xtick = {0,1,...,10},
