--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -11,19 +11,19 @@
 
 \maketitle
 
-\import{.}{table.tex}
+\input{table.tex}
 
-\import{.}{section-introduction.tex}
+\input{section-introduction.tex}
 
-\import{.}{section-task-definition.tex}
+\input{section-task-definition.tex}
 
-\import{.}{section-related-work.tex}
+\input{section-related-work.tex}
 
-\import{.}{section-methodology.tex}
+\input{section-methodology.tex}
 
-\import{.}{section-results.tex}
+\input{section-results.tex}
 
-\import{.}{section-conclusion.tex}
+\input{section-conclusion.tex}
 
 \printbibliography
 
