--- a/report/table-best-window-size.tex
+++ b/report/table-best-window-size.tex
@@ -9,7 +9,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=static_language=en_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{English}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 0 column 2/.append style={
@@ -18,7 +18,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=static_language=fi_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Finnish}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 3 column 2/.append style={
@@ -27,7 +27,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=static_language=hr_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Croatian}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[skip rows between index={3}{4},
@@ -55,7 +55,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=contextual_language=en_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{English}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 3 column 2/.append style={
@@ -64,7 +64,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=contextual_language=fi_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Finnish}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 0 column 2/.append style={
@@ -73,7 +73,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=contextual_language=hr_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Croatian}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[skip rows between index={3}{4},
@@ -101,7 +101,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=pooled_language=en_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{English}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 3 column 2/.append style={
@@ -110,7 +110,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=pooled_language=fi_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Finnish}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[every row 0 column 2/.append style={
@@ -119,7 +119,7 @@
               \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/model=pooled_language=hr_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Croatian}
   \end{subfigure}
-  \par\bigskip\par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[skip rows between index={3}{4},
