--- a/report/table-practice-best-score.tex
+++ b/report/table-practice-best-score.tex
@@ -31,7 +31,7 @@
           scoreevaluation}]{../results/best/both_best_static.csv}
     \caption{Static}
   \end{subfigure}
-  \par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[columns={
@@ -42,7 +42,7 @@
           scoreevaluation}]{../results/best/both_best_contextual.csv}
     \caption{Contextual}
   \end{subfigure}
-  \par\bigskip
+  \subfigurespace
   \begin{subfigure}[b]{\textwidth}
     \centering
     \pgfplotstabletypeset[columns={
@@ -53,7 +53,7 @@
           scoreevaluation}]{../results/best/both_best_pooled.csv}
     \caption{Pooled}
   \end{subfigure}
-  \caption{The best scores on the \emph{`practice kit'} dataset for each kind of
+  \caption{The best scores on the `practice kit' dataset for each kind of
     embedding, and the corresponding scores on the evaluation dataset.
     The results were limited to the composition operation of addition due to the
     variability of the scores with multiplication and concatenation
