--- a/report/figure-score-practice.tex
+++ b/report/figure-score-practice.tex
@@ -25,8 +25,9 @@
             vertical sep=0.2in,
             horizontal sep=0.2in,
           },
-        width=2.25in,
-        height=1.6in,
+        scale only axis,
+        width=1.5in,
+        height=1in,
         xlabel=Window size,
         ylabel=Score,
         ymin=-0.5,
@@ -76,8 +77,9 @@
             vertical sep=0.2in,
             horizontal sep=0.2in,
           },
-          width=2.25in,
-          height=1.6in,
+          scale only axis,
+          width=1.5in,
+          height=1in,
           xlabel=Window size,
           ylabel=Score,
           ymin=-0.5,
@@ -127,8 +129,9 @@
           vertical sep=0.2in,
           horizontal sep=0.2in,
         },
-      width=2.25in,
-      height=1.6in,
+      scale only axis,
+      width=1.5in,
+      height=1in,
       xlabel=Window size,
       ylabel=Score,
       ymin=-0.5,
