--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -3,6 +3,13 @@
 
 \begin{document}
 
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[L]{SemEval-2020 Task 3}
+\fancyhead[R]{Tim Lawson}
+\fancyfoot[C]{\thepage}
+% \fancyfoot[R]{\wordcount{}words}
+
 \title{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
 \author[]{Tim Lawson}
 \affil[]{University of Bristol}
